--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test node --test"
+    "test": "cross-env NODE_ENV=test node --test",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,11 @@
     "mongoose": "^8.5.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "@stylistic/eslint-plugin-js": "^2.13.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
   }
